--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img id="otamatone" src="assets/otamatone.png" alt="Otamatone" />
+    <img id="otamatone" src="images/otamatone_closed.png" alt="Otamatone">
   </div>
   <script src="script.js"></script>
 </body>
