--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>플랜비 오타마</title>
+  <title>플랜비 오타마xhs</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <img id="otamatone" src="images/otamatone_closed.png" alt="Otamatone">
+    <div id="keyboard-visualizer">
+      <span data-key="1">1</span>
+      <span data-key="2">2</span>
+      <span data-key="3">3</span>
+      <span data-key="4">4</span>
+      <span data-key="5">5</span>
+      <span data-key="6">6</span>
+      <span data-key="7">7</span>
+      <span data-key="8">8</span>
+      <span data-key="9">9</span>
+      <span data-key="0">0</span>
+    </div>
+    
   </div>
   <script src="script.js"></script>
 </body>
