--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
 <body>
   <div class="container">
     <img id="otamatone" src="images/otamatone_closed.png" alt="Otamatone">
-    <div id="keyboard-visualizer">
-      <span data-key="1">1</span>
-      <span data-key="2">2</span>
-      <span data-key="3">3</span>
-      <span data-key="4">4</span>
-      <span data-key="5">5</span>
-      <span data-key="6">6</span>
-      <span data-key="7">7</span>
-      <span data-key="8">8</span>
-      <span data-key="9">9</span>
-      <span data-key="0">0</span>
-    </div>
+    <div id="piano">
+      <div id="black-keys">
+        <span data-key="q">Q</span>
+        <span data-key="w">W</span>
+        <span class="gap"></span>
+        <span data-key="r">R</span>
+        <span data-key="t">T</span>
+        <span data-key="y">Y</span>
+      </div>
+      <div id="white-keys">
+        <span data-key="1">1</span>
+        <span data-key="2">2</span>
+        <span data-key="3">3</span>
+        <span data-key="4">4</span>
+        <span data-key="5">5</span>
+        <span data-key="6">6</span>
+        <span data-key="7">7</span>
+        <span data-key="8">8</span>
+      </div>
+    </div>    
     
   </div>
   <script src="script.js"></script>
