--- a/index.html
+++ b/index.html
@@ -9,27 +9,20 @@
 <body>
   <div class="container">
     <img id="otamatone" src="images/otamatone_closed.png" alt="Otamatone">
-    <div id="piano">
-      <div id="black-keys">
-        <span data-key="q">Q</span>
-        <span data-key="w">W</span>
-        <span class="gap"></span>
-        <span data-key="r">R</span>
-        <span data-key="t">T</span>
-        <span data-key="y">Y</span>
+    <div class="keyboard">
+      <div class="white-keys">
+        <div class="white-key" data-key="1">1</div>
+        <div class="white-key" data-key="2">2</div>
+        <div class="white-key" data-key="3">3</div>
+        <div class="white-key" data-key="4">4</div>
+        <div class="white-key" data-key="5">5</div>
+        <div class="white-key" data-key="6">6</div>
+        <div class="white-key" data-key="7">7</div>
+        <div class="white-key" data-key="8">8</div>
+        <div class="white-key" data-key="9">9</div>
+        <div class="white-key" data-key="0">0</div>
       </div>
-      <div id="white-keys">
-        <span data-key="1">1</span>
-        <span data-key="2">2</span>
-        <span data-key="3">3</span>
-        <span data-key="4">4</span>
-        <span data-key="5">5</span>
-        <span data-key="6">6</span>
-        <span data-key="7">7</span>
-        <span data-key="8">8</span>
-      </div>
-    </div>    
-    
+    </div>       
   </div>
   <script src="script.js"></script>
 </body>
